--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,10 +15,10 @@
         android:id="@+id/ph"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="64dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="64dp"
         android:gravity="center"
         android:hint="@string/prompt_ph"
         android:inputType="phone"
@@ -34,10 +34,10 @@
         android:id="@+id/car"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:hint="@string/prompt_car"
         android:imeActionLabel="@string/action_sign_in_short"
@@ -54,9 +54,9 @@
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_gravity="start"
         android:enabled="false"
         android:gravity="center"
         android:text="@string/action_sign_in"
@@ -71,10 +71,11 @@
         android:id="@+id/anonymous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_gravity="start"
         android:enabled="true"
+        android:gravity="center"
         android:text="@string/action_any_sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +86,7 @@
 
     <ProgressBar
         android:id="@+id/loading"
+        style="?android:attr/progressBarStyleInverse"
         android:layout_width="4dp"
         android:layout_height="165dp"
         android:layout_gravity="center"
@@ -93,7 +95,6 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
         android:visibility="gone"
-        style="?android:attr/progressBarStyleInverse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
